crates/common/src/tuner/snapshots/common__tuner__layout__tests__tuner_layout_1280x720.snap
---
source: crates/common/src/tuner/layout.rs
expression: tuner_layout
---
{
  "space": [
    1280.0,
    720.0
  ],
  "orientation": "Horizontal",
  "safe_area_padding": {
    "top": 18.0,
    "right": 18.0,
    "bottom": 18.0,
    "left": 18.0
  },
  "line_position": [
    [
      0.0,
      669.8994384780264
    ],
    [
      1280.0,
      669.8994384780264
    ]
  ],
  "sensor_radius": 32.100561521973674,
  "num_sensors": 6
}
