crates/common/src/tuner/snapshots/common__tuner__layout__tests__tuner_layout_1366x768.snap
---
source: crates/common/src/tuner/layout.rs
expression: tuner_layout
---
{
  "space": [
    1366.0,
    768.0
  ],
  "orientation": "Horizontal",
  "safe_area_padding": {
    "top": 18.0,
    "right": 18.0,
    "bottom": 18.0,
    "left": 18.0
  },
  "line_position": [
    [
      0.0,
      750.0
    ],
    [
      1366.0,
      750.0
    ]
  ],
  "sensor_radius": 25.286636865252525,
  "num_sensors": 10
}
