crates/common/src/tuner/snapshots/common__tuner__layout__tests__tuner_layout_1536x864.snap
---
source: crates/common/src/tuner/layout.rs
expression: tuner_layout
---
{
  "space": [
    1536.0,
    864.0
  ],
  "orientation": "Horizontal",
  "safe_area_padding": {
    "top": 18.0,
    "right": 18.0,
    "bottom": 18.0,
    "left": 18.0
  },
  "line_position": [
    [
      0.0,
      846.0
    ],
    [
      1536.0,
      846.0
    ]
  ],
  "sensor_radius": 28.518763381863746,
  "num_sensors": 10
}
