crates/common/src/tuner/snapshots/common__tuner__layout__tests__tuner_layout_1600x900.snap
---
source: crates/common/src/tuner/layout.rs
expression: tuner_layout
---
{
  "space": [
    1600.0,
    900.0
  ],
  "orientation": "Horizontal",
  "safe_area_padding": {
    "top": 18.0,
    "right": 18.0,
    "bottom": 18.0,
    "left": 18.0
  },
  "line_position": [
    [
      0.0,
      882.0
    ],
    [
      1600.0,
      882.0
    ]
  ],
  "sensor_radius": 21.114017493578956,
  "num_sensors": 14
}
