crates/common/src/tuner/snapshots/common__tuner__layout__tests__tuner_layout_1920x1080.snap
---
source: crates/common/src/tuner/layout.rs
expression: tuner_layout
---
{
  "space": [
    1920.0,
    1080.0
  ],
  "orientation": "Horizontal",
  "safe_area_padding": {
    "top": 18.0,
    "right": 18.0,
    "bottom": 18.0,
    "left": 18.0
  },
  "line_position": [
    [
      0.0,
      1041.3723561943573
    ],
    [
      1920.0,
      1041.3723561943573
    ]
  ],
  "sensor_radius": 20.627643805642734,
  "num_sensors": 14
}
