crates/common/src/tuner/snapshots/common__tuner__layout__tests__tuner_layout_360x800.snap
---
source: crates/common/src/tuner/layout.rs
expression: tuner_layout
---
{
  "space": [
    360.0,
    800.0
  ],
  "orientation": "Vertical",
  "safe_area_padding": {
    "top": 44.0,
    "right": 0.0,
    "bottom": 34.0,
    "left": 0.0
  },
  "line_position": [
    [
      0.0,
      0.0
    ],
    [
      0.0,
      800.0
    ]
  ],
  "sensor_radius": 21.994185648852053,
  "num_sensors": 6
}
