crates/common/src/tuner/snapshots/common__tuner__layout__tests__tuner_layout_393x873.snap
---
source: crates/common/src/tuner/layout.rs
expression: tuner_layout
---
{
  "space": [
    393.0,
    873.0
  ],
  "orientation": "Vertical",
  "safe_area_padding": {
    "top": 0.0,
    "right": 0.0,
    "bottom": 0.0,
    "left": 0.0
  },
  "line_position": [
    [
      22.786832332088288,
      0.0
    ],
    [
      22.786832332088288,
      873.0
    ]
  ],
  "sensor_radius": 22.786832332088288,
  "num_sensors": 6
}
