crates/common/src/tuner/snapshots/common__tuner__layout__tests__tuner_layout_414x896.snap
---
source: crates/common/src/tuner/layout.rs
expression: tuner_layout
---
{
  "space": [
    414.0,
    896.0
  ],
  "orientation": "Vertical",
  "safe_area_padding": {
    "top": 24.0,
    "right": 0.0,
    "bottom": 16.0,
    "left": 0.0
  },
  "line_position": [
    [
      21.835705331868777,
      0.0
    ],
    [
      21.835705331868777,
      896.0
    ]
  ],
  "sensor_radius": 21.835705331868777,
  "num_sensors": 6
}
